--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
-<html lang="en">
+<!doctype html >
+<html lang="en" className="html">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="./src/index.scss" />
+    <title>Emily Cassel Portfolio</title>
+    
   </head>
+
+
+
+  <header>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
+    
+  </header>
+
+
+
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="src/main.jsx"></script>
   </body>
+
+
+
+
+  <footer>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
+  </footer>
 </html>
